# pdf2md

./: .gitignore  LICENSE  README.md  pyproject.toml  sample_with_figs.md  test_extract.py
autoresearch/: loop.py  scorer.py
benchmark-outputs/: attention-is-all-you-need.json  attention-is-all-you-need.md  bert.json  bert.md  gpt4-technical-report.md  mistral-7b.md  nature-gut-adaptation.md
pdf2md/: __init__.py  __main__.py  assembler.py  batch.py  cache.py  cli.py  confidence.py  config.py  core.py  document.py  quality_report.py  verifier.py
pdf2md/benchmarks/: runner.py
pdf2md/enhancers/: __init__.py  captions.py  cross_references.py  figure_index.py  figures.py  math.py  metadata.py  references.py  superscripts.py  tables.py  text_cleaner.py
pdf2md/extractors/: __init__.py  base.py  marker_ext.py  pdfplumber_ext.py  pymupdf_ext.py  pypdfium_ext.py  vlm_ext.py
pdf2md/providers/: __init__.py  _ratelimit.py  anthropic.py  base.py  claude_cli.py  gemini.py  ollama.py  openai.py  registry.py
pdfvault/: __init__.py  __main__.py  assembler.py  batch.py  cache.py  cli.py  confidence.py  config.py  core.py  document.py  quality_report.py  verifier.py
scripts/: build_scanned_sample.py
specs/: scorer-generalization.md
tests/: conftest.py  test_assembler.py  test_autoresearch_scorer.py  test_batch.py  test_benchmark.py  test_benchmark_loader.py  test_cache.py  test_cli.py  test_confidence.py  test_config.py  test_core.py  test_document.py  test_integration.py  test_quality_fixes.py  test_quality_report.py  test_ratelimit.py  test_triage.py  test_verifier.py
(+51 files in other folders)
