[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdfvault"
version = "0.1.0"
description = "The first open-source agentic PDF-to-markdown parser"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Toufic Mayassi"}]
keywords = ["pdf", "markdown", "ocr", "vlm", "agentic", "document-parsing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "pypdfium2>=4.0",
    "pdfplumber>=0.11",
    "Pillow>=10.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
marker = ["marker-pdf>=1.9"]
pymupdf = ["pymupdf>=1.24"]
docling = ["docling>=2.50"]
ocr = ["pytesseract>=0.3", "easyocr>=1.7"]
full = ["pdfvault[marker,pymupdf,docling,ocr]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "reportlab>=4.0",
]

[project.scripts]
pdfvault = "pdfvault.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
